# omi-transcription

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_STREAMING.md  Dockerfile  Makefile  README.md  app.py  audio_utils.py  config.py  create_test_audio.py  docker-compose.yml  main.py  models.py  pyproject.toml  r2_storage.py  requirements.txt  test_api.sh  test_local.py  transcription.py
.github/: SETUP_SECRETS.md
.github/workflows/: ci.yml
tests/: convert_audio.py  test_e2e.py  test_e2e_r2.py  test_streaming.py  test_unit.py
tests/fixtures/: test.m4a
tests/utils/: convert_audio.py  create_test_audio.py
